--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@playwright/test": "^1.40.0",
     "@sveltejs/adapter-auto": "3.3.1",
+    "@sveltejs/adapter-static": "^3.0.8",
     "@sveltejs/kit": "2.22.2",
     "@sveltejs/vite-plugin-svelte": "4.0.4",
     "@types/eslint": "^8.56.0",
