fix: フロントエンドのDockerfileを整理し、最新版をデプロイ
- 不要なテスト用Dockerfileとスクリプトを削除
- 本番用のDockerfileに統一
- .gitignoreに.svelte-kitを追加
- App Runnerで最新のイメージを使用するように更新

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,10 @@ cdk.out
 # Large OSM data files
 data/kanto-latest.osm.pbf
 data/*-latest.osm.pbf
+# SvelteKit
+.svelte-kit
+build
+
+# Temporary files
+.tmp
+*.tmp
