feat: GraphHopperサーバーに通行止めエリア機能のサポートを追加
- カスタムモデルファイルにareas設定を追加
- フロントエンドでblock_areaをポリゴンとして送信
- GraphHopperクライアントでPOSTメソッドでカスタムモデルを送信
- Dockerfile.simpleにカスタムモデルディレクトリのコピーを追加
- config-apprunner.ymlでカスタムモデルを有効化

--- a/services/graphhopper/Dockerfile.simple
+++ b/services/graphhopper/Dockerfile.simple
@@ -16,6 +16,9 @@ RUN curl -L -o graphhopper.jar \
 COPY services/graphhopper/config-demo.yml config.yml
 COPY services/graphhopper/config-apprunner.yml config-apprunner.yml
 
+# カスタムモデルディレクトリをコピー
+COPY services/graphhopper/custom_models /graphhopper/custom_models
+
 # OSMデータをコピー
 COPY data/map.osm.pbf /graphhopper/data/map.osm.pbf
 
