feat: GraphHopperカスタムモデルで通行止めエリア機能を実装
- 正しいカスタムモデル構文を使用（in_blocked_area）
- priorityとspeedの両方で通行止めエリアを設定
- CHを無効化してカスタムモデルのエリア機能を有効化

--- a/services/graphhopper/config-apprunner.yml
+++ b/services/graphhopper/config-apprunner.yml
@@ -33,6 +33,8 @@ graphhopper:
   routing:
     # 最大訪問ノード数
     max_visited_nodes: 1000000
+    # カスタムモデルでエリアを使用するためCHを無効化
+    ch.disable: true
 
 # サーバー設定
 server:
